# termflix

./: .#ideas.md  .gitignore  AUDIT.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEADJOE  Makefile  README.md  hacker_news_release.md  ideas.md  install.sh  reddit_release.md
.codex/: hooks.json
.githooks/: pre-commit
.github/: FUNDING.yml
.github/workflows/: ci.yml  gallery.yml  publish-crates.yml  release.yml
docs/: ARCHITECTURE.md  EXTERNAL_ANIMATION.md
docs/plans/: 2026-02-26-fix-all-audit-issues.md  2026-02-26-garden-design.md  2026-02-26-garden.md
docs/superpowers/plans/: 2026-05-06-four-features-plan.md  2026-05-06-four-features.md
docs/superpowers/specs/: 2026-05-06-four-features-design.md
src/: config.rs  external.rs  gallery.rs  gif.rs  main.rs  png.rs  record.rs  render_sink.rs
src/animations/: atom.rs  aurora.rs  automata.rs  blackhole.rs  boids.rs  campfire.rs  cells.rs  crystallize.rs  dna.rs  dragon.rs  eclipse.rs  fire.rs  fireflies.rs  flappy_bird.rs  flow_field.rs  fountain.rs  galton.rs  garden.rs  globe.rs  hackerman.rs  ink_in_water.rs  invaders.rs  langton.rs  lava.rs  lenia.rs  life.rs  lightning.rs  mandelbrot.rs  mandelbulb.rs  matrix.rs  maze.rs  metaballs.rs  mod.rs  nbody.rs  newtons_cradle.rs  ocean.rs  particles.rs  pendulum.rs  petals.rs  physarum.rs  (+25 more)
src/generators/: mod.rs
src/render/: braille.rs  canvas.rs  cell.rs  color_assist.rs  delta.rs  encoder.rs  halfblock.rs  mod.rs
src/render/snapshots/: ascii-ansi256-dither.txt  ascii-ansi256.txt  ascii-mono.txt  ascii-truecolor.txt  braille-ansi256-dither.txt  braille-ansi256.txt  braille-mono.txt  braille-truecolor.txt  halfblock-ansi256-dither.txt  halfblock-ansi256.txt  halfblock-mono.txt  halfblock-truecolor-bloom.txt  halfblock-truecolor.txt
