[package]
name = "termflix"
version = "0.5.1"
edition = "2024"
description = "Terminal animation player with 44 procedurally generated animations, multiple render modes, and true color support"
license = "MIT"
repository = "https://github.com/paulrobello/termflix"
homepage = "https://github.com/paulrobello/termflix"
readme = "README.md"
keywords = ["terminal", "animation", "ascii-art", "braille", "tui"]
categories = ["command-line-utilities", "visualization"]
authors = ["Paul Robello <probello@gmail.com>"]

[dependencies]
crossterm = "0.29.0"
noise = "0.9.0"
clap = { version = "4.6", features = ["derive"] }
rand = "0.10"
libc = "0.2"
toml = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = { version = "8", default-features = false, features = ["macos_kqueue", "mio"] }
dirs = "6"
